@@ -38,6 +38,7 @@ private:
 	QIcon m_groupIcon;
 	QIcon m_censoredIcon;
 	QIcon m_hiddenIcon;
+	bool m_justToggledVisibility = false;
 };
 
 }
